# Frog

./: .gitignore  COPYING  LICENSE  README.md  com.github.tenderowl.lens.json  frog.doap  generate_pot.sh  leptonica.json  meson.build  pyproject.toml  tesseract.json
.github/workflows/: main.yml
data/: com.github.tenderowl.frog.appdata.xml.in  com.github.tenderowl.frog.desktop.in  com.github.tenderowl.frog.gresource.xml  com.github.tenderowl.frog.gschema.xml  com.github.tenderowl.lens.appdata.xml.in  com.github.tenderowl.lens.desktop.in  com.github.tenderowl.lens.gresource.xml  com.github.tenderowl.lens.gschema.xml  frog.css  meson.build  style.css
data/icons/: meson.build
data/ui/: camera_page.blp  extracted_page.blp  language_dialog.blp  language_dialog.ui  language_popover.blp  language_popover_row.blp  language_row.blp  language_row.ui  preferences.blp  preferences.ui  preferences_dialog.blp  preferences_general.blp  preferences_general.ui  preferences_languages.blp  preferences_languages.ui  preferences_window.blp  share_row.blp  shortcuts.blp  shortcuts.ui  welcome_page.blp  window.blp  window.ui
flatpak/: com.github.tenderowl.frog.json  com.github.tenderowl.lens.json  gst-plugins-rs.json  leptonica.json  libportal.json  python3-dateutil.json  python3-gTTS.json  python3-loguru.json  python3-modules.json  python3-nanoid.json  python3-posthog.json  python3-pytesseract.json  python3-pyzbar.json  tesseract.json  zbar.json
frog/: __init__.py  about_dialog.py  clipboard_service.py  config.py  extractToClipboard.py  extract_to_clipboard.py  gobject_worker.py  language_dialog.py  language_manager.py  language_row.py  lens.gresource.xml  list_menu_row.py  main.py  preferences.py  screenshot_backend.py  settings.py  shortcut.py  window.py
frog/services/: camera_service.py  clipboard_service.py  posthog.py  screenshot_service.py  share_service.py  telemetry.py  tts.py
frog/types/: download_state.py  language_item.py
frog/widgets/: camera_page.py  extracted_page.py  language_dialog.py  language_popover.py  language_popover_row.py  language_row.py  list_menu_row.py  preferences_dialog.py  preferences_general_page.py  preferences_languages_page.py  preferences_window.py  share_row.py  welcome_page.py
lens/: config.py  language_model.py  lens.gresource.xml  main.py  screenshot_backend.py  settings.py  window.py
po/: LINGUAS  POTFILES  ar.po  be_Latn.po  bn.po  ca.po  com.github.tenderowl.frog.pot  cs.po  de.po  en.po  es.po  eu.po  fi.po  fr.po  frog.pot  hi.po  ie.po  it.po  ja.po  ko_KR.po  meson.build  nb_NO.po  nl.po  oc.po  pt.po  pt_BR.po  ru.po  sv.po  ta.po  tr.po  uk.po  update_potfiles.sh  zh_Hans.po
